--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,7 @@ Imports:
     foreach (>= 1.5.2),
     ggrepel (>= 0.9.5)
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    mockery (>= 0.4.4)
 Config/testthat/edition: 3
+Config/testthat/parallel: true
