--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,11 @@ export(centralityMajor)
 export(centrality_mean)
 export(centrality_quantiles)
 export(centroids)
-export(condition_specific_hubs)
 export(convert_ID)
 export(cor2W_transform)
+export(criticalNodes)
+export(descriptive_stats_col)
+export(descriptive_stats_rows)
 export(emPAI_function)
 export(filter_interactome)
 export(filter_quantiles)
@@ -32,7 +34,9 @@ export(transpose)
 export(weights_as_distances)
 importFrom(Hmisc,rcorr)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,cur_column)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(foreach,"%dopar%")
@@ -89,7 +93,6 @@ importFrom(stats,dist)
 importFrom(stats,manova)
 importFrom(stats,median)
 importFrom(stats,p.adjust)
-importFrom(stats,p.adjust.methods)
 importFrom(stats,quantile)
 importFrom(stats,summary.aov)
 importFrom(utils,combn)
