--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(Corr_PPI.model)
 export(DAve)
 export(DCI)
 export(FC)
-export(Gtest)
 export(LDA)
 export(MDS_plot)
 export(NSAF)
@@ -14,7 +13,6 @@ export(Violin_degreeRandom)
 export(Volcano_Plot)
 export(biggest_component)
 export(bridging_centrality)
-export(centralityMajor)
 export(centrality_mean)
 export(centrality_quantiles)
 export(centroids)
@@ -94,5 +92,5 @@ importFrom(stats,manova)
 importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(stats,summary.aov)
-importFrom(utils,combn)
