Bug fixing single_profile_enrichment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(igraph,V)
 importFrom(igraph,as_adjacency_matrix)
 importFrom(igraph,as_edgelist)
 importFrom(igraph,betweenness)
+importFrom(igraph,closeness)
 importFrom(igraph,components)
 importFrom(igraph,degree)
 importFrom(igraph,delete_vertices)
