single_profile_enrichment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(preprocessing_data)
 export(protein_mapping)
 export(quantitative_analysis)
 export(remove_duplicates)
+export(single_profile_enrichment)
 export(summary_CriticalNodes)
 export(summary_LDA)
 export(summary_table)
