--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(NSAF_function)
 export(Normalization)
 export(Violin_betweennessRandom)
 export(Violin_degreeRandom)
-export(Volcano_Plot)
 export(biggest_component)
 export(bridging_centrality)
 export(build_interactome)
@@ -48,6 +47,8 @@ export(summary_LDA)
 export(summary_table)
 export(transpose)
 export(unweighted_network_analysis)
+export(volcano_groups)
+export(volcano_plot)
 export(wDegree)
 export(weighted_network_analysis)
 export(weights_as_distances)
