--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(preprocessing_data)
 export(protein_mapping)
 export(quantitative_analysis)
 export(remove_duplicates)
+export(save_images)
 export(save_results)
 export(single_profile_enrichment)
 export(summary_critical_nodes)
@@ -129,6 +130,7 @@ importFrom(stats,dist)
 importFrom(stats,manova)
 importFrom(stats,median)
 importFrom(stats,p.adjust)
+importFrom(stats,p.adjust.methods)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,summary.aov)
